# Dynamic-mu-PBWT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  test_deletion.cpp  test_insertion.cpp
include/: .nfs0000000001c93ad500001258  dcpbwt.h  dcpbwt_column.h  phi.h  utils.h
test_data/: query.1.vcf  ref.1.vcf
